# FellowShow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Fellow-show-update-transcript.md  README.md  broadcast-output.html  eslint.config.js  index.html  knip.json  package-lock.json  package.json  vite.config.ts
.github/: CONTRIBUTING.md  SECURITY.md
data/: build-bible-db.ts  compute-embeddings.ts  download-asante-twi.ts  download-biblegateway.py  download-model.ts  download-sources.test.ts  download-sources.ts  download-thiagobodruk-bibles.ts  download-whisper-model.ts  import-hymns.ts  import-tk2012.ts  merge-tauri-updater-manifests.ts  precompute-embeddings-onnx.py  precompute-embeddings.py  (+7 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: broadcast.json  default.json
src-tauri/crates/api/: Cargo.toml
src-tauri/crates/api/src/: coerce.rs  command.rs  dispatch.rs  http.rs  lib.rs  osc.rs
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: capture.rs  device.rs  lib.rs  meter.rs  vad.rs
src-tauri/crates/bible/: Cargo.toml
src-tauri/crates/bible/src/: crossref.rs  db.rs  hymns.rs  lib.rs  lookup.rs  models.rs  search.rs
src-tauri/crates/broadcast/: Cargo.toml
src-tauri/crates/broadcast/src/: lib.rs  ndi.rs
src-tauri/crates/detection/: Cargo.toml
src-tauri/crates/detection/src/: lib.rs  merger.rs  pipeline.rs  reading_mode.rs
src-tauri/crates/detection/src/direct/: automaton.rs  books.rs  context.rs  detector.rs  fuzzy.rs  parser.rs
src-tauri/crates/detection/src/semantic/: chunker.rs  detector.rs  ensemble.rs  hnsw_index.rs  mod.rs  onnx_embedder.rs  precompute.rs  synonyms.rs
src-tauri/crates/notes/: Cargo.toml
src-tauri/crates/notes/src/: lib.rs
src-tauri/crates/stt/: Cargo.toml
src-tauri/crates/stt/src/: deepgram.rs  keyterms.rs  lib.rs  openai_compatible.rs  rest.rs  whisper.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  bible.rs  broadcast.rs  detection.rs  documents.rs  easyworship.rs  mod.rs  remote.rs  stt.rs  summary.rs
(+204 files in other folders)
