[workspace]
members = [
    ".",
    "crates/audio",
    "crates/stt",
    "crates/bible",
    "crates/detection",
    "crates/broadcast",
    "crates/api",
    "crates/notes",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic warns about
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[package]
name = "fellowshow"
version = "0.1.2"
description = "FellowShow - Real-Time AI Bible Verse Detection"
authors = ["Faithful"]
license = "MIT"
repository = "https://github.com/openbezal/fellowshow"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fellowshow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fellowshow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json.workspace = true
serde.workspace = true
log.workspace = true
tokio.workspace = true
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
fellowshow-audio = { path = "crates/audio" }
fellowshow-bible = { path = "crates/bible" }
fellowshow-stt = { path = "crates/stt" }
fellowshow-broadcast = { path = "crates/broadcast" }
fellowshow-detection = { path = "crates/detection", features = ["onnx", "vector-search"] }
fellowshow-api = { path = "crates/api" }
crossbeam-channel = "0.5"
dotenvy = "0.15"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
default = ["whisper"]
whisper = ["fellowshow-stt/whisper"]

[lints]
workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
